--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -166,8 +166,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>567</width>
-            <height>1080</height>
+            <width>569</width>
+            <height>1078</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_34">
@@ -1033,6 +1033,17 @@ per pixel:</string>
                <number>2</number>
               </property>
               <item>
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>Remark: It is simple reflections mapping which works only in CPU mode (OpenCL disabled).
+ To do mapping of radiance or high dynamic reflections use HDRI texture as a background texture.</string>
+                </property>
+                <property name="wordWrap">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
                <layout class="QGridLayout" name="gridLayout_73">
                 <property name="spacing">
                  <number>2</number>
@@ -1156,8 +1167,8 @@ per pixel:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>553</width>
-            <height>1562</height>
+            <width>551</width>
+            <height>1410</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -2475,8 +2486,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>567</width>
-            <height>1080</height>
+            <width>569</width>
+            <height>1078</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -3152,8 +3163,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>553</width>
-            <height>1222</height>
+            <width>551</width>
+            <height>1092</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_41">
@@ -3281,9 +3292,6 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
             </widget>
            </item>
            <item>
-            <widget class="cLightSourcesManager" name="widget_light_sources_manager" native="true"/>
-           </item>
-           <item>
             <widget class="QGroupBox" name="groupBox_8">
              <property name="title">
               <string>Light placement options</string>
@@ -3341,6 +3349,9 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
               </item>
              </layout>
             </widget>
+           </item>
+           <item>
+            <widget class="cLightSourcesManager" name="widget_light_sources_manager" native="true"/>
            </item>
            <item>
             <widget class="MyGroupBox" name="groupCheck_random_lights_group">
@@ -4182,8 +4193,8 @@ from fractal:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>567</width>
-            <height>1069</height>
+            <width>569</width>
+            <height>1070</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
